--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 
         // === ENHANCED GOOGLE SHEETS INTEGRATION ===
         async function loadDataFromSheets() {
-            if (SHEET_ID === 'xyz123') { // Make sure this matches your Sheet ID
+            if (SHEET_ID === '1lHJlL1yVtN96_pDbCK4kBJWl_6KFlWcqnifDhI69GmU/edit?gid=0#gid=0') { // Make sure this matches your Sheet ID
                 console.log("Google Sheets configured - loading data...");
             }
 
