--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
     <script>
         // === GOOGLE SHEETS CONFIGURATION ===
         // Replace with your Google Apps Script Web App URL
-        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbyNGC1qNVes8WD6KnvjwUSHZOrKBPGfR5FoEnK24q7q_dpkXkv3Md4rCW6xYYFf0Mxh/exec/exec';
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyNGC1qNVes8WD6KnvjwUSHZOrKBPGfR5FoEnK24q7q_dpkXkv3Md4rCW6xYYFf0Mxh/exec/exec';
         
         // === CALENDAR DATA ===
         let programmes = {
