--- a/index.html
+++ b/index.html
@@ -565,9 +565,10 @@
     </div>
 
     <script>
-        // === GOOGLE SHEETS CONFIGURATION ===
-        // Replace with your Google Apps Script Web App URL
-        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyNGC1qNVes8WD6KnvjwUSHZOrKBPGfR5FoEnK24q7q_dpkXkv3Md4rCW6xYYFf0Mxh/exec/exec';
+// === GOOGLE SHEETS CONFIGURATION ===
+// Use the correct URL (only one /exec)
+const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyWNBJmwifx8vNNvrwfal10ClPfn58XzXmMtvD8tjIiFSpqPDQpYRRAZyffx96_qjvvZQ/exec';
+
         
         // === CALENDAR DATA ===
         let programmes = {
