--- a/index.html
+++ b/index.html
@@ -686,8 +686,8 @@
     <script>
         // === SUPABASE CONFIGURATION ===
         // Replace with your actual Supabase credentials
-        const SUPABASE_URL = 'https://test.supabase.co';
-        const SUPABASE_ANON_KEY = 'test';
+        const SUPABASE_URL = 'https://hbmttwxsgpgrfrcijagt.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImhibXR0d3hzZ3BncmZyY2lqYWd0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMTEyMjcsImV4cCI6MjA3OTc4NzIyN30.LeownHuFwZmFOx7XOBFZYh2VZ9qy9H4fThuuR4WF1I0';
         
         // Initialize Supabase client
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
